View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025362 | Open CASCADE | OCCT:Samples | public | 2014-10-13 15:45 | 2016-12-09 16:39 |
Reporter | apn | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.8.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0025362: Samples - Conversion to B-Spline doesn't show bspline surface on Windows 8 | ||||
Description | Sample Conversion to B-Spline doesn't show bspline surface on Windows 8. | ||||
Steps To Reproduce | 1. Launch sample "Conversion to B-Spline" (mfc Convert sample) 2. Click next\previous sample 3. Build surface should be highlighted (by orange color for wires, by blue color for shapes), first sample is correct, others are not | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Sergey, please check the current behavior |
|
Dear abv, i have checked mfc Convert sample on my local station Windows 10 vc10 win64 Release, bug can be reproduced, only first example works correctly, others are not. In case of Windows 7 via remote desktop - an exception appears on the example number 5 (pipe). |
|
Sergey, please investigate to know the reason |
|
Branch CR25362 has been created by ski. SHA-1: 722091d36e1fb4c3b2987cbcfd5b5e1e363ce6d0 Detailed log of new commits: Author: ski Date: Wed Nov 23 10:24:20 2016 +0300 0025362: Samples - Conversion to B-Spline doesn't show bspline surface on Windows 8 Added constants WM_MOUSEFIRST and WM_PAINT in WaitForInput method for correct handling of system messages. |
|
Branch CR25362 has been updated forcibly by ski. SHA-1: 81fe266d55fe7c67bcd3b66f78fd2bc14c35e8f2 |
|
Dear Andrey, OCCT branch CR25362 contains changes for correct handling of system messages. I have checked it on my local station (Windows 10 64-bit) - all is OK. In case of crash on Windows 7 (via remote desktop) it seems that the reason is remote desktop. I propose to create separate issue if it is needed. Please, review. |
|
No remarks, please integrate |
|
Branch CR25362 has been deleted by kgv. SHA-1: 81fe266d55fe7c67bcd3b66f78fd2bc14c35e8f2 |
occt: master 168077a6 2016-11-23 07:24:20
Committer: apn Details Diff |
0025362: Samples - Conversion to B-Spline doesn't show bspline surface on Windows 8 Added constants WM_MOUSEFIRST and WM_PAINT in WaitForInput method for correct handling of system messages. |
Affected Issues 0025362 |
|
mod - samples/mfc/standard/10_Convert/src/OCCDemo_Presentation.cpp | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-13 15:45 | apn | New Issue | |
2014-10-13 15:45 | apn | Assigned To | => bugmaster |
2014-10-13 15:45 | apn | Test case number | => Not needed |
2014-10-13 15:45 | apn | Assigned To | bugmaster => aba |
2014-10-13 15:45 | apn | Status | new => assigned |
2015-11-16 16:43 |
|
Target Version | => 7.0.0 |
2015-12-28 11:31 | kgv | Target Version | 7.0.0 => 7.1.0 |
2015-12-28 11:31 | kgv | Summary | Sample Conversion to B-Spline doesn't show bspline surface on Windows 8 => Samples - Conversion to B-Spline doesn't show bspline surface on Windows 8 |
2016-11-09 11:20 |
|
Note Added: 0060078 | |
2016-11-09 11:20 |
|
Assigned To | aba => ski |
2016-11-09 11:20 |
|
Status | assigned => feedback |
2016-11-09 17:30 |
|
Note Added: 0060138 | |
2016-11-09 17:30 |
|
Assigned To | ski => abv |
2016-11-18 21:05 |
|
Note Added: 0060564 | |
2016-11-18 21:05 |
|
Assigned To | abv => ski |
2016-11-18 21:05 |
|
Status | feedback => assigned |
2016-11-23 10:24 | git | Note Added: 0060703 | |
2016-11-23 10:33 | git | Note Added: 0060704 | |
2016-11-23 13:16 |
|
Note Added: 0060721 | |
2016-11-23 13:16 |
|
Assigned To | ski => abv |
2016-11-23 13:16 |
|
Status | assigned => resolved |
2016-11-23 13:16 |
|
Steps to Reproduce Updated | |
2016-11-23 13:16 |
|
Note Edited: 0060721 | |
2016-11-25 10:34 |
|
Note Added: 0060770 | |
2016-11-25 10:34 |
|
Assigned To | abv => bugmaster |
2016-11-25 10:34 |
|
Status | resolved => reviewed |
2016-11-25 14:42 | apn | Changeset attached | => occt master 168077a6 |
2016-11-25 14:42 | apn | Assigned To | bugmaster => apn |
2016-11-25 14:42 | apn | Status | reviewed => verified |
2016-11-25 14:42 | apn | Resolution | open => fixed |
2016-12-07 11:30 | git | Note Added: 0061231 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |