0025362: Samples - Conversion to B-Spline doesn't show bspline surface on Windows 8

Added constants WM_MOUSEFIRST and WM_PAINT in WaitForInput method for correct handling of system messages.